@@ -15,6 +15,8 @@
 	  exception events are out of order in the iCalendar file.
 	* Fixed: Issue #48. Overridden events in the recurrence iterator that were
 	  past the UNTIL date were ignored.
+	* Added: getDuration for DURATION values such as TRIGGER.
+	  Thanks to @SimonSimCity.
 
 3.0.0-stable (2013-06-21)
 	* Fixed: includes.php file was still broken. Our tool to generate it had
